# UAV_Robot_ControlPanel

./: .gitignore  CMakeLists.txt  HostGUI_spec.md  Makefile  README.md  build_windows.bat
src/: main.cpp
src/core/: MeshPinger.cpp  MeshPinger.h  PlatformUtils.h  Protocol.h  RpcClient.cpp  RpcClient.h  VideoClient.cpp  VideoClient.h
src/gui/: AirportWidget.cpp  AirportWidget.h  AppIcon.cpp  AppIcon.h  ArmWidget.cpp  ArmWidget.h  CameraWidget.cpp  CameraWidget.h  DroneWidget.cpp  DroneWidget.h  GripperWidget.cpp  GripperWidget.h  LogWidget.cpp  LogWidget.h  MainWindow.cpp  MainWindow.h  MeshMapWidget.cpp  MeshMapWidget.h  NpuWidget.cpp  NpuWidget.h  StyleSheet.h  Tab2CommConfig.cpp  Tab2CommConfig.h  Tab3Help.cpp  Tab3Help.h  Tab4TaskConfig.cpp  Tab4TaskConfig.h  UGVWidget.cpp  UGVWidget.h
steps/: episode.STEP
tools/: install_centos_deps.sh  install_linux_deps.sh  install_ubuntu_deps.sh  install_ubuntu_runtime.sh  package_release.sh
